--- a/painel_cliente/templates/painel_cliente/inativo.html
+++ b/painel_cliente/templates/painel_cliente/inativo.html
@@ -1,6 +1,7 @@
 {% extends 'painel_cliente/base_painel.html' %}
 
 {% block title %}Acesso Bloqueado{% endblock %}
+{% block page_title %}Acesso Bloqueado{% endblock %}
 
 {% block content %}
     <div class="status-message">
