--- a/painel_cliente/static/painel_cliente/css/pages/login.css
+++ b/painel_cliente/static/painel_cliente/css/pages/login.css
@@ -2,21 +2,26 @@
   background: var(--color-surface);
   border-radius: var(--radius-lg);
   box-shadow: var(--shadow-login);
-  padding: 40px 35px;
+  padding: 32px 28px;
   width: 360px;
   max-width: 95vw;
   text-align: center;
 }
 
 .login-container h2 {
-  font-size: 2rem;
-  margin-bottom: 22px;
+  font-size: 1.5rem;
+  margin-bottom: 16px;
   color: var(--color-heading);
   font-weight: 600;
-  letter-spacing: 1px;
 }
 
 .login-logo {
   width: 200px;
   margin: 0 auto 20px;
+}
+
+.login-container .btn,
+.login-container input[type="submit"] {
+  width: 100%;
+  margin-top: 16px;
 }
