--- a/painel_cliente/templates/painel_cliente/login.html
+++ b/painel_cliente/templates/painel_cliente/login.html
@@ -1,31 +1,29 @@
+{% extends 'painel_cliente/base_painel.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" href="{% static 'painel_cliente/css/main.css' %}">
-</head>
-<body class="login-page">
-    <div class="login-container">
-        <img class="login-logo" src="{% static 'painel_cliente/ncfly_logo.png' %}" alt="Logo NCfly">
-        <h2>Entrar</h2>
-        {% if form.errors %}
-            <p class="erro">Usuário ou senha incorretos. Tente novamente.</p>
-        {% endif %}
-        <form method="post">
-            {% csrf_token %}
-            <div>
-                <label for="id_username">Usuário:</label>
-                {{ form.username }}
-            </div>
-            <div>
-                <label for="id_password">Senha:</label>
-                {{ form.password }}
-            </div>
-            <button type="submit">Entrar</button>
-        </form>
+
+{% block title %}Login{% endblock %}
+{% block page_title %}Login{% endblock %}
+
+{% block content %}
+    <div class="login-wrapper">
+        <div class="login-container">
+            <img class="login-logo" src="{% static 'painel_cliente/ncfly_logo.png' %}" alt="Logo NCfly">
+            <h2>Entrar</h2>
+            {% if form.errors %}
+                <p class="erro">Usuário ou senha incorretos. Tente novamente.</p>
+            {% endif %}
+            <form method="post">
+                {% csrf_token %}
+                <div>
+                    <label for="id_username">Usuário:</label>
+                    {{ form.username }}
+                </div>
+                <div>
+                    <label for="id_password">Senha:</label>
+                    {{ form.password }}
+                </div>
+                <button class="btn" type="submit">Entrar</button>
+            </form>
+        </div>
     </div>
-    <script type="module" src="{% static 'painel_cliente/js/app.js' %}" defer></script>
-</body>
-</html>
+{% endblock %}
