--- a/painel_cliente/templates/registration/login.html
+++ b/painel_cliente/templates/registration/login.html
@@ -1,35 +1,36 @@
 {% extends 'painel_cliente/base_painel.html' %}
 
 {% block title %}Login - NCfly{% endblock %}
-{% block body_class %}login-page{% endblock %}
+{% block page_title %}Login{% endblock %}
 
 {% block content %}
-  <div class="login-container">
-    <img src="{% static 'painel_cliente/ncfly_logo.png' %}" alt="Logo NCfly" style="width: 200px; height: auto; display: block;margin: 0 auto 20px;">
-    <h2>Bem-vindo ao NCfly</h2>
+  <div class="login-wrapper">
+    <div class="login-container">
+      <img class="login-logo" src="{% static 'painel_cliente/ncfly_logo.png' %}" alt="Logo NCfly">
+      <h2>Bem-vindo ao NCfly</h2>
 
-    {% if error_message %}
-      <div class="erro">{{ error_message }}</div>
-    {% endif %}
+      {% if error_message %}
+        <div class="erro">{{ error_message }}</div>
+      {% endif %}
 
-    <form method="post">
-      {% csrf_token %}
-      <label for="id_identifier">{{ form.identifier.label }}</label>
-      {{ form.identifier }}
+      <form method="post">
+        {% csrf_token %}
+        <label for="id_identifier">{{ form.identifier.label }}</label>
+        {{ form.identifier }}
 
-      <label for="id_password">{{ form.password.label }}</label>
-      {{ form.password }}
+        <label for="id_password">{{ form.password.label }}</label>
+        {{ form.password }}
 
-      <label for="tipo_acesso">Tipo de Acesso</label>
-      <select name="tipo_acesso" id="tipo_acesso">
-        <option value="cliente">Cliente</option>
-        <option value="operador">Operador</option>
-        <option value="admin">Administrador</option>
-        <option value="superadmin">Super Admin</option>
-      </select>
+        <label for="tipo_acesso">Tipo de Acesso</label>
+        <select name="tipo_acesso" id="tipo_acesso">
+          <option value="cliente">Cliente</option>
+          <option value="operador">Operador</option>
+          <option value="admin">Administrador</option>
+          <option value="superadmin">Super Admin</option>
+        </select>
 
-      <input type="submit" value="Entrar">
-    </form>
+        <input class="btn" type="submit" value="Entrar">
+      </form>
+    </div>
   </div>
 {% endblock %}
-
